clang/test/BSC/Negative/InitAnalysis/init-borrow-uninit.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test: _Borrow pointer use-before-init caught by init analysis (not sema).

_Safe void use_borrow(int *_Borrow p);

// _Borrow pointer used without init → error.
_Safe void test_borrow_ptr_uninit(void) {
    int *_Borrow p;
    use_borrow(p); // expected-error {{use of uninitialized value: `p`}}
}

// _Borrow pointer init on one branch → maybe-uninit.
_Safe void test_borrow_branch(int cond) {
    int x = 1;
    int *_Borrow p;
    if (cond) {
        p = &_Mut x;
    }
    use_borrow(p); // expected-error {{use of possibly uninitialized value: `p`}}
}

// Struct with _Borrow field, field not written → error.
struct SB { int *_Borrow p; int v; };
_Safe void use_sb(struct SB s);

_Safe void test_borrow_struct_partial(void) {
    struct SB s;
    s.v = 1;
    use_sb(s); // expected-error {{use of uninitialized value: `s`}}
}

// Nested struct with _Borrow field.
struct OuterB { struct SB inner; int x; };
_Safe void use_ob(struct OuterB o);

_Safe void test_nested_borrow_uninit(void) {
    struct OuterB o;
    o.x = 1;
    o.inner.v = 2;
    use_ob(o); // expected-error {{use of uninitialized value: `o`}}
}
